@@ -33,7 +33,7 @@ import org.testng.annotations.Test;
  * @test
  * @bug 6378422
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true stream.Bug6378422
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow stream.Bug6378422
  * @run testng/othervm stream.Bug6378422
  * @summary Test setting reuse-instance property on StAX factory.
  */
